--- a/members/templates/details.html
+++ b/members/templates/details.html
@@ -15,5 +15,7 @@
     <p>Member since: {{ mymember.joined_date }}</p>
 
     <p>Back to <a href="/members">Members</a></p>
+
+    <h3>Bye</h3>
 </body>
 </html>
