--- a/members/templates/all_members.html
+++ b/members/templates/all_members.html
@@ -1,17 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>All members</title>
-</head>
-<body>
-    <h1>Members</h1>
+{% extends "master.html" %}
+
+{% block title %}
+  My Tennis Club - List of all members
+{% endblock %}
+
+
+{% block content %}
+  <h1>Members</h1>
   
-    <ul>
+  <ul>
     {% for x in mymembers %}
-        <li><a href="details/{{ x.id }}">{{ x.first_name }} {{ x.last_name }}</a></li>
+      <li><a href="details/{{ x.id }}">{{ x.first_name }} {{ x.last_name }}</a></li>
     {% endfor %}
-    </ul>
-</body>
-</html>
+  </ul>
+{% endblock %}
