--- a/members/templates/details.html
+++ b/members/templates/details.html
@@ -1,21 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Details</title>
-</head>
-<body>
+{% extends "master.html" %}
 
-    <h1>Details</h1>
-    
-    <h1>{{ mymember.first_name }} {{ mymember.last_name }}</h1>
-    
-    <p>Phone: {{ mymember.phone }}</p>
-    <p>Member since: {{ mymember.joined_date }}</p>
+{% block title %}
+  Details about {{ mymember.first_name }} {{ mymember.last_name }}
+{% endblock %}
 
-    <p>Back to <a href="/members">Members</a></p>
 
-    <h3>Bye</h3>
-</body>
-</html>
+{% block content %}
+  <h1>{{ mymember.first_name }} {{ mymember.last_name }}</h1>
+  
+  <p>Phone {{ mymember.phone }}</p>
+  <p>Member since: {{ mymember.joined_date }}</p>
+  
+  <p>Back to <a href="/members">Members</a></p>
+  
+{% endblock %}
