Fixed testing template

--- a/members/templates/template.html
+++ b/members/templates/template.html
@@ -4,15 +4,15 @@
 
   <ul>
     {% for x in mymembers %}
-      <li>{{ x.firstname }}</li>
+      <li>{{ x.first_name }}</li>
     {% endfor %}
   </ul>
 
-  {% if greeting == 1 %}
+  <!--{% if greeting == 1 %}
     <h1>Hello, this is my first Django project </h1>
   {% else %}
     <h1>Bye, this is my first Django project</h1>
-  {% endif %}
+  {% endif %} -->
 
 </body>
 </html>
