--- a/members/templates/template.html
+++ b/members/templates/template.html
@@ -8,11 +8,12 @@
     {% endfor %}
   </ul>
 
-  <!--{% if greeting == 1 %}
+  
+  {% if greeting == 1 %}
     <h1>Hello, this is my first Django project </h1>
   {% else %}
     <h1>Bye, this is my first Django project</h1>
-  {% endif %} -->
+  {% endif %}
 
 </body>
 </html>
